# BRob

./: .gitignore  README.md
esp32/brob_control/: brob_control.ino  encoders.ino  motors.ino  neck.ino  screen.ino  ultrasonic.ino  wifi_secrets_example.h
ros2/brob_bringup/: package.xml  setup.cfg  setup.py
ros2/brob_bringup/launch/: brob.launch.py  brob_launch.py
ros2/brob_bringup/resource/: brob_bringup
ros2/brob_hardware/: package.xml  setup.cfg  setup.py
ros2/brob_hardware/brob_hardware/: command_bridge_node.py  vision_bridge_node.py
ros2/brob_hardware/resource/: brob_hardware
vision/camera_first_test/: camera_first_test.ino  wifi_secrets_example.h
vision/target_finder/: .gitignore  README.md  local_config_example.py  requirements.txt  run_target_finder.py  run_vision_api.sh  simple_target_finder.py  vision_api.py
