<?xml version="1.0"?>
<package format="3">
  <name>brob_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for launching the BRob ROS 2 bridge nodes.</description>
  <maintainer email="your_email@example.com">Ingrid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>brob_hardware</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
